<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".activity.ScientificCalculatorActivity">

    <TextView
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorPrimaryDark"
        android:gravity="center|end"
        android:hint="@string/_0"
        android:maxLength="100"
        android:padding="10dp"
        android:textColor="@color/colorTextonPrimary"
        android:textColorHint="@color/colorTextonSecondary"
        android:textSize="25sp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/History"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:gravity="center|end"
        android:padding="10dp"
        android:text="@string/history"
        android:textColor="@color/colorTextonPrimary"
        android:textColorHint="@color/colorTextonSecondary"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#533304"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/logfunction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/log"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_In"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ln"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_sin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sin"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_cos"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#533304"
            android:text="@string/cos"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_tan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tan"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#533304"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_power"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Cube"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_root"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/root"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_openbrac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/open"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_closebrac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_percentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/percent"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_7"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_8"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_9"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/plus"
            android:textColor="@color/colorSecondaryLite"
            android:textSize="30sp" />

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:src="@drawable/backspace_black"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_4"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_5"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_6"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/sub"
            android:textColor="@color/colorSecondaryLite"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/c"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="2"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/_1"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/_2"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/_3"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_multiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/multiply"
                    android:textColor="@color/colorSecondaryLite"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">



                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/btn_background"
                    android:text="@string/_0"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_dot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/dot"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_divide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/divide"
                    android:textColor="@color/colorSecondaryLite"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_result"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/equal"
                android:textColor="@color/colorTextonPrimary"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>